[gd_scene load_steps=21 format=3 uid="uid://ef1bcl6w0dvy"]

[ext_resource type="PackedScene" uid="uid://cbsmy8l7srlc1" path="res://scenes/game_object/enemy/enemy_Base.tscn" id="1_u8d58"]
[ext_resource type="Shader" uid="uid://dd7xij77hfa8a" path="res://scenes/components/hit_flash/shader/hit_flash.gdshader" id="2_rbuo0"]
[ext_resource type="Script" uid="uid://bnjrfbu6wbg1l" path="res://scenes/game_object/enemy/enemy_Cube_Shielder/enemy_Cube_Shielder.gd" id="2_tqlaq"]
[ext_resource type="PackedScene" uid="uid://ialf7ur8mrxp" path="res://scenes/enemy_skill/enemy_skill_ShieldSlam/enemy_skill_ShieldSlam.tscn" id="4_fugpu"]
[ext_resource type="PackedScene" uid="uid://diyefkios6nos" path="res://scenes/components/animation_handler/animation_handler.tscn" id="4_tqlaq"]
[ext_resource type="Shader" uid="uid://8m2vl11guwmx" path="res://shader/explode.gdshader" id="5_6k0qr"]
[ext_resource type="PackedScene" uid="uid://dr2vponw2jou3" path="res://scenes/components/barrier/barrier.tscn" id="5_dvman"]
[ext_resource type="Texture2D" uid="uid://il3ihdhk3qv7" path="res://scenes/game_object/enemy/enemy_Cube_Shielder/sprites/enemy_Square_Shielder-1.png" id="5_h8htr"]
[ext_resource type="Texture2D" uid="uid://cwpabssj5242b" path="res://scenes/game_object/enemy/enemy_Cube_Shielder/sprites/enemy_Square_Shielder-WoodeTowerShield.png" id="7_fugpu"]
[ext_resource type="AnimationLibrary" uid="uid://cg7t287wui7ei" path="res://scenes/game_object/enemy/enemy_Cube_Shielder/animation/enemy_cube_shielder_lib.tres" id="11_uoqil"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7g67l"]
resource_local_to_scene = true
shader = ExtResource("2_rbuo0")
shader_parameter/lerp_percent = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8htr"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fugpu"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6l8js"]
resource_local_to_scene = true
shader = ExtResource("5_6k0qr")
shader_parameter/fragment_number = Vector2(20, 20)
shader_parameter/dissolve_state = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3f1jk"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_uoqil"]
resource_name = "RESET"
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../visuals/main_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../visuals/main_sprite/body:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../visuals/main_sprite/body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../visuals/main_sprite/shield:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../visuals/main_sprite/body:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_h8htr")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../visuals/main_sprite/shield:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../visuals/main_sprite/shield:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../visuals/main_sprite/body:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqof2"]
_data = {
&"RESET": SubResource("Animation_uoqil")
}

[sub_resource type="Animation" id="Animation_fugpu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("visuals/main_sprite/shield:material:shader_parameter/dissolve_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("visuals/main_sprite/shield:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h8htr"]
resource_name = "default"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("visuals/main_sprite/shield:material:shader_parameter/dissolve_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.39229202, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("visuals/main_sprite/shield:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.39229202, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3f1jk"]
_data = {
&"RESET": SubResource("Animation_fugpu"),
&"explode": SubResource("Animation_h8htr")
}

[node name="enemy_Cube_Shielder" node_paths=PackedStringArray("body_sprite", "shield_sprite") instance=ExtResource("1_u8d58")]
script = ExtResource("2_tqlaq")
body_sprite = NodePath("visuals/main_sprite/body")
shield_sprite = NodePath("visuals/main_sprite/shield")
base_shield_hp = 10.0

[node name="velocity" parent="." index="2"]
max_speed = 25.0

[node name="look" parent="." index="3" node_paths=PackedStringArray("visual_node")]
visual_node = NodePath("../visuals")

[node name="dissolve_effect" parent="." index="5" node_paths=PackedStringArray("sprite")]
sprite = NodePath("../visuals/main_sprite/body")

[node name="hit_flash" parent="." index="6" node_paths=PackedStringArray("sprite")]
hit_flash_material = SubResource("ShaderMaterial_7g67l")
sprite = NodePath("../visuals/main_sprite/body")

[node name="enemy_skill_ShieldSlam" parent="attack_manager" index="3" node_paths=PackedStringArray("hitbox_collision_shape", "follow_node") instance=ExtResource("4_fugpu")]
hitbox_collision_shape = NodePath("../../hitbox/collision_shape_2d")
follow_node = NodePath("../../visuals/main_sprite/shield")

[node name="hitbox" parent="." index="10"]
damage_amount = 10.0

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_h8htr")
debug_color = Color(0.5137255, 0.5764706, 0, 0.6901961)

[node name="collision_shape_2d" type="CollisionShape2D" parent="hurtbox" index="1"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_fugpu")
debug_color = Color(0.98039216, 0.27058825, 0.23529412, 0.78431374)

[node name="main_sprite" type="Node2D" parent="visuals" index="0"]

[node name="body" type="Sprite2D" parent="visuals/main_sprite" index="0"]
position = Vector2(0, -8)
texture = ExtResource("5_h8htr")

[node name="shield" type="Sprite2D" parent="visuals/main_sprite" index="1"]
material = SubResource("ShaderMaterial_6l8js")
position = Vector2(9, -8)
texture = ExtResource("7_fugpu")

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="13"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_3f1jk")

[node name="barrier" parent="." index="14" instance=ExtResource("5_dvman")]

[node name="animation_handler" parent="." index="15" node_paths=PackedStringArray("anim_player") instance=ExtResource("4_tqlaq")]
anim_player = NodePath("../main_animation_player")

[node name="main_animation_player" type="AnimationPlayer" parent="." index="16"]
root_node = NodePath("../animation_handler")
libraries = {
&"": SubResource("AnimationLibrary_lqof2"),
&"enemy_cube_shielder_lib": ExtResource("11_uoqil")
}

[node name="shield_animation_player" type="AnimationPlayer" parent="." index="17"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_3f1jk")
}
